@@ -1,3 +1,9 @@
+2023-06-06 Albert Chu <chu11@llnl.gov>
+
+	* common/toolcommon/tool-cmdline-common.h,
+	common/toolcommon/tool-cmdline-common.c: Remove legacy SDR options
+	-f and -q.  Update users accordingly.
+
 2023-06-05 Albert Chu <chu11@llnl.gov>
 
 	* libipmimonitoring/ipmi_monitoring_sensor_reading.c
